2015-08-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.41 released.

2015-08-18  Carl Hetherington  <cth@carlh.net>

	* Add configuration for DCP creator metadata.

	* Version 2.1.40 released.

2015-08-18  Carl Hetherington  <cth@carlh.net>

	* Fix various problems when creating
	subtitled Interop DCPs on Windows.

2015-08-17  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.39 released.

2015-08-17  Carl Hetherington  <cth@carlh.net>

	* Fix problems when encoding 3D from separate
	L/R sources.

	* Version 2.1.38 released.

2015-08-17  Carl Hetherington  <cth@carlh.net>

	* Fix crop of some YUV content.

2015-08-11  Carl Hetherington  <cth@carlh.net>

	* Prevent multiple creation of certificate chains
	on startup (part of #651).

2015-08-10  Carl Hetherington  <cth@carlh.net>

	* Fix erroneous folder creation on Windows (#654).

	* Fix incorrect layout on Windows (#653).

2015-08-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.37 released.

2015-08-09  Carl Hetherington  <cth@carlh.net>

	* Fix various incorrect behaviours with 96kHz
	audio sources.

2015-08-06  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.36 released.

2015-08-06  Carl Hetherington  <cth@carlh.net>

	* Make dcpomatic_create assign a default name if none
	is specified.  Fix dcpomatic_create help.

	* Add --no-sign and --no-use-isdcf-name to dcpomatic_create.

2015-08-05  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.35 released.

2015-08-05  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.34 released.

2015-08-05  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.33 released.

2015-08-04  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.32 released.

2015-08-04  Carl Hetherington  <cth@carlh.net>

	* Add --standard option to dcpomatic_create.

	* Disable "2D version of 3D content" ISDCF metadata
	checkbutton with 3D content (part of #652).

2015-07-30  c.hetherington  <cth@carlh.net>

	* Allow recreation of the certificate chain and key